@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-05T08:08:48Z",
+  "timestamp" : "2023-08-05T16:08:30Z",
   "count_outdated" : 4869,
   "uniques_outdated" : 1435,
-  "count" : 4920,
-  "uniques" : 1469,
+  "count" : 4921,
+  "uniques" : 1470,
   "clones" : [
     {
       "timestamp": "2023-07-22T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2023-08-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
