@@ -1,6 +1,6 @@
 {
-  "count": 50,
-  "uniques": 24,
+  "count": 51,
+  "uniques": 25,
   "clones": [
     {
       "timestamp": "2023-07-22T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2023-08-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
