@@ -1,3 +1,12 @@
+2023-08-05T16:08:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5771611752 # 1789
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-05
+* notice: last 14d: unq all: 25 51
+* notice: prev accum: outdated-unq outdated-all / unq all: 1435 4869 / 1469 4920
+* notice: next accum: outdated-unq outdated-all / unq all: 1435 4869 / 1470 4921
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-08-05]
+
 2023-08-05T08:08:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5769635506 # 1788
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-05
